--- a/styles.css
+++ b/styles.css
@@ -106,3 +106,32 @@ body{
     background: radial-gradient(rgba(0,0,0,0.2), 25%, transparent, transparent);
 }
 
+.vapour{
+    position: relative;
+    display: flex;
+    z-index: 1;
+    padding: 0 20px;
+}
+.vapour span{
+    position: relative;
+    display: block;
+    bottom: 50px;
+    margin: 0 2px 50px;
+    min-width: 8px;
+    height: 120px;
+    background: #fff;
+    border-radius: 50%;
+    animation: animate 5s linear infinite;
+}
+
+@keyframes animate {
+    0%{
+        transform: translateY(0) scaleX(1);
+    }
+    50%{
+        transform: translateY(-150px) scaleX(5);
+    }
+    100%{
+        transform: translateY(-300px) scaleX(10);
+    }
+}
